[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name='SplineSmooth3D'
version='0.1.2'
authors=[{name='Ian Malone',email='i.malone@ucl.ac.uk'}]
license={text='BSD-3-Clause'}
description='3D B-spline smoother supporting thin-plate and multi-level basis splines'
readme='README.md'
dependencies=[
    "numpy >= 1.17.2",
    "scipy >= 1.3.1"
]
classifiers=['License :: OSI Approved :: BSD License',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Software Development :: Libraries :: Python Modules']

[project.urls]
Homepage='https://github.com/imalone/SplineSmooth3D'
Repository='https://github.com/imalone/SplineSmooth3D'

[tool.setuptools]
script-files=['bin/measureprofile.py',
    'bin/splinesmooth3d-promote-demo.py',
    'bin/splinesmooth3d-demo.py',
    'bin/splinesmooth3d-zerounsupported-demo.py',
    'bin/splinesmooth3d-j0-demo.py',
    'bin/test-scipyspline-demo.py']
